# Sign-Language-Learning-Tool

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  manage.py  package.json  pyproject.toml  requirements.txt
config/gunicorn/: prod.py
config/nginx/: nginx.conf
learning_site/: asgi.py  celery.py  roles.py  settings.py  urls.py  wsgi.py
sign_language_app/: admin.py  apps.py  background_tasks.py  classifier.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
sign_language_app/fixtures/: seed.yaml
sign_language_app/migrations/: 0001_initial.py  0002_course_is_public.py  0003_unit_name.py  0004_remove_unit_difficulty_course_difficulty.py  0005_unit_course.py  0006_alter_unit_options_unit_ordering_number.py  0007_alter_unit_options.py  0008_alter_unit_options.py  0009_unitattempt.py  0010_alter_unitattempt_unit_alter_unitattempt_user.py  0011_alter_unitattempt_unit_alter_unitattempt_user.py  0012_gesturelocation_gesture_locations.py  0013_gesture_left_hand_gesture_right_hand.py  0014_gesture_creator_gesture_status.py  0015_alter_gesture_status.py  0016_course_creator.py  0017_remove_course_is_public_course_visibility.py  0018_alter_course_options.py  0019_teachercode_students.py  0020_rename_students_studentsaccess.py  0021_alter_studentsaccess_student_and_more.py  0022_alter_studentsaccess_student_and_more.py  0023_unitattempt_score_usersettings.py  0024_alter_unitattempt_score.py  0025_remove_unitattempt_score_gestureattempt.py  0026_unitattempt_score_alter_gestureattempt_unit_attempt.py  0027_alter_unitattempt_datetime.py  0028_rename_attempts_gestureattempt_attempt.py  0029_gestureattempt_success.py  0030_alter_gestureattempt_options.py  0031_gestureattempt_user.py  0032_usersettings_can_train_on_videos_and_more.py  0033_unitattempt_is_overruled.py  0034_rename_can_train_on_videos_usersettings_allow_video_training_and_more.py  0035_gestureattempt_added_to_dataset.py  0036_usersettings_avatar.py
sign_language_app/templatetags/: extras.py
sign_language_app/views/: api.py  auth.py  error_views.py  profile_views.py  views.py
sl_ai/: __init__.py  config.py  dataset.py  gesture_classifier.py  gestures_dataset.csv  gestures_dataset_hallo.csv  gestures_dataset_small.csv  interactive.py  process_videos.py  utils.py
sl_ai/notebooks/: final.ipynb  final_testing.ipynb
templates/sign_language_app/: base.html  (+1 more)
(+46 files in other folders)
