[tool.poetry]
name = "learning_site"
version = "0.1.0"
description = "The website for the sign language learning tool."
authors = ["ArthurVanRemoortel <arthurvanremoortel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
Django = "^4.1.1"
libsass = "^0.21.0"
django-compressor = "^4.1"
django-sass-processor = "^1.2.1"
django-webpack-loader = "^1.6.0"
install = "^1.3.5"
django-less = "^0.7.2"
django-static-precompiler = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
