[tool.poetry]
name = "learning_site"
version = "0.1.0"
description = "The website for the sign language learning tool."
authors = ["ArthurVanRemoortel <arthurvanremoortel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
Django = "^4.1.1"
libsass = "^0.21.0"
django-compressor = "^4.1"
django-sass-processor = "^1.2.1"
Pillow = "^9.2.0"
numpy = "1.23.4"
ffmpeg-python = "^0.2.0"
scikit-video = "^1.1.11"
opencv-python = "^4.6.0.66"
pandas = "^1.5.0"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
PyYAML = "^6.0"
aiosmtpd = "^1.4.2"
mediapipe = "^0.9.0.1"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"
seaborn = "^0.12.1"
schedule = "^1.1.0"
django-role-permissions = "^3.1.1"
prompt-toolkit = "^3.0.36"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.5"
keras = "^2.11.0"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
